# bsdtar-prebuilt

./: .bazelrc  BUILD.bazel  Dockerfile  MODULE.bazel  MODULE.bazel.windows  README.md  WORKSPACE.bazel  build_docker.sh
.github/workflows/: build.yaml  build_release.sh  release.yml
patches/: archive_read_support_format_mtree.patch  libarchive-bazel-windows-fixes.patch
