bazel_dep(name = "aspect_bazel_lib", version = "2.5.3")
bazel_dep(name = "libarchive", version = "3.7.5")
bazel_dep(name = "hermetic_cc_toolchain", version = "3.1.0")

toolchains = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
use_repo(toolchains, "zig_sdk")

register_toolchains(
    "@zig_sdk//libc_aware/toolchain:linux_arm64_musl",
    "@zig_sdk//libc_aware/toolchain:linux_amd64_musl",
    "@zig_sdk//toolchain:darwin_amd64",
    "@zig_sdk//toolchain:darwin_arm64",
)
