bazel_dep(name = "aspect_bazel_lib", version = "2.15.3")
bazel_dep(name = "libarchive", version = "3.8.1")
bazel_dep(name = "hermetic_cc_toolchain", version = "4.0.0")

# libarchive_bsdtar_windows_crlf.patch
# - tolerate mtree files with CRLF endings
# - TODO: remove when https://github.com/libarchive/libarchive/pull/2717 is merged
single_version_override(
    module_name = "libarchive",
    patches = [
        "//patches:libarchive_bsdtar_windows_crlf.patch",
    ],
    patch_strip = 1,
)

toolchains = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
use_repo(toolchains, "zig_sdk")

register_toolchains(
    "@zig_sdk//libc_aware/toolchain:linux_arm64_musl",
    "@zig_sdk//libc_aware/toolchain:linux_amd64_musl",
    "@zig_sdk//toolchain:darwin_amd64",
    "@zig_sdk//toolchain:darwin_arm64",
)
